Fixed routes being drawn and fixed some overlap issues

--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -4,6 +4,8 @@
   left: 0px;
   width: 250px;
   height: 100vh;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .sidebar * {
